# pyfilesystem3

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  appveyor.yml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: package.yml  test.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: concepts.rst  conf.py  extension.rst  external.rst  globbing.rst  guide.rst  implementers.rst  index.rst  info.rst  interface.rst  introduction.rst  openers.rst  walking.rst
docs/source/reference/: appfs.rst  base.rst  compress.rst  copy.rst  enums.rst  errors.rst  filesize.rst  ftpfs.rst  glob.rst  info_objects.rst  memoryfs.rst  mirror.rst  mode.rst  mountfs.rst  move.rst  multifs.rst  opener.rst  osfs.rst  path.rst  permissions.rst  subfs.rst  tarfs.rst  tempfs.rst  tools.rst  tree.rst  walk.rst  wildcard.rst  wrap.rst  wrapfs.rst  zipfs.rst
examples/: count_py.py  find_dups.py  rm_pyc.py  upload.py
fs3/: __init__.py  _bulk.py  _fscompat.py  _ftp_parse.py  _repr.py  _url_tools.py  _version.py  appfs.py  base.py  compress.py  copy.py  enums.py  error_tools.py  errors.py  filesize.py  ftpfs.py  glob.py  info.py  iotools.py  lrucache.py  memoryfs.py  mirror.py  mode.py  mountfs.py  move.py  multifs.py  osfs.py  path.py  permissions.py  subfs.py  tarfs.py  tempfs.py  test.py  time.py  tools.py  tree.py  walk.py  wildcard.py  wrap.py  wrapfs.py  (+1 more)
fs3/opener/: __init__.py  appfs.py  base.py  ftpfs.py  memoryfs.py  osfs.py  parse.py  registry.py  tarfs.py  tempfs.py  zipfs.py
tests/: requirements.txt  test_appfs.py  test_archives.py  test_base.py  test_bulk.py  test_copy.py  test_doctest.py  test_encoding.py  test_enums.py  test_error_tools.py  test_errors.py  test_filesize.py  test_fscompat.py  test_ftp_parse.py  test_ftpfs.py  test_glob.py  test_imports.py  test_info.py  test_iotools.py  test_lrucache.py  test_memoryfs.py  test_mirror.py  test_mode.py  test_mountfs.py  test_move.py  test_multifs.py  test_new_name.py  test_opener.py  test_osfs.py  test_path.py  test_permissions.py  test_subfs.py  test_tarfs.py  test_tempfs.py  test_time.py  test_tools.py  test_tree.py  test_url_tools.py  test_walk.py  test_wildcard.py  (+3 more)
