# --- Project configuration -------------------------------------------------

[metadata]
version = attr: fs3._version.__version__
name = pyfilesystem3
author = Will McGugan
author_email = will@willmcgugan.com
maintainer = Jevin Sweval
maintainer_email = jevinsweval@gmail.com
url = https://github.com/jevinskie/pyfilesystem3
license = MIT
license_file = LICENSE
description = Python's filesystem abstraction layer - next generation fork of PyFilesystem2
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: System :: Filesystems
    Typing :: Typed
project_urls =
    Bug Reports = https://github.com/jevinskie/pyfilesystem3/issues
    Documentation = https://pyfilesystem3.readthedocs.io/en/latest/
    Wiki = https://www.pyfilesystem.org/

[options]
zip_safe = false
packages = find:
python_requires = >=3.9
setup_requires =
    setuptools >=49.2.1
install_requires =
    appdirs~=1.4.3
    setuptools

[options.packages.find]
exclude = tests

[options.package_data]
fs3 = py.typed

[bdist_wheel]
universal = 1

# --- Individual linter configuration ---------------------------------------

[pydocstyle]
inherit = false
ignore = D102,D105,D200,D203,D213,D406,D407
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py

[mypy]
ignore_missing_imports = true

[mypy-fs3.*]
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = false
warn_unused_ignores = false
warn_return_any = false

[mypy-fs3.test]
disallow_untyped_defs = false

[flake8]
extend-ignore = E203,E402,W503
max-line-length = 88
per-file-ignores =
    fs3/__init__.py:F401
    fs3/*/__init__.py:F401
    tests/*:E501
    fs3/opener/*:F811
    fs3/_pathcompat.py:C401

[isort]
default_section = THIRDPARTY
known_first_party = fs3
known_standard_library = sys, typing
line_length = 88
profile = black
skip_gitignore = true

# --- Test and coverage configuration ------------------------------------------

[coverage:run]
branch = true
omit = fs3/test.py
source = fs3
relative_files = true
parallel = true

[coverage:report]
show_missing = true
skip_covered = true
exclude_lines =
    pragma: no cover
    if False:
    if typing.TYPE_CHECKING:
    @typing.overload

[tool:pytest]
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')

# --- Tox automation configuration ---------------------------------------------

[tox:tox]
envlist = py{39,310,312}, pypy{39,310}, typecheck, codestyle, docstyle, codeformat
sitepackages = false
skip_missing_interpreters = true
requires =
  setuptools >=49.2.1

[testenv]
commands = python3 -m coverage run --rcfile {toxinidir}/setup.cfg -m pytest {posargs} {toxinidir}/tests
deps =
  -rtests/requirements.txt
  coverage~=5.0
  py{39,310,311,312,py39,py310}: pytest~=6.0
  py{39,310,311,312,py9,py310}: pytest-randomly~=3.5
  scandir: .[scandir]
  !scandir: .

[testenv:typecheck]
commands = mypy --config-file {toxinidir}/setup.cfg {toxinidir}/fs3
deps =
  .
  mypy==0.800

[testenv:codestyle]
commands = flake8 --config={toxinidir}/setup.cfg {toxinidir}/fs3 {toxinidir}/tests
deps =
  flake8==3.7.9
  #flake8-builtins==1.5.3
  flake8-bugbear==19.8.0
  flake8-comprehensions==3.1.4
  flake8-mutable==1.2.0
  flake8-tuple==0.4.0

[testenv:codeformat]
commands = black --check {toxinidir}/fs3
deps =
  black==22.3.0

[testenv:docstyle]
commands = pydocstyle --config={toxinidir}/setup.cfg {toxinidir}/fs3
deps =
  pydocstyle==5.1.1

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    pypy-3.9: pypy39
    pypy-3.10: pypy310
